Fixed mobile visibility on the landing page

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -91,7 +91,7 @@ nav {
 
 .nav-active {
   transform: translateX(0%);
-  z-index: 1;
+  z-index: 0;
 }
 
 @keyframes navLinkFade {
